syncdoc-core/tests/snapshots/basic__generic_function.snap
---
source: syncdoc-core/tests/basic.rs
expression: "test_with_code(\"test_generic_function\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

fn generic<T: Clone>(value: T) -> T {
    value.clone()
}
