syncdoc-core/tests/snapshots/basic__ignores_non_functions.snap
---
source: syncdoc-core/tests/basic.rs
expression: "apply_doc_injection(input, \"../docs\")"
---
# [doc = include_str ! ("../docs/x.md")]
const x: String = "fn not_a_function";
# [doc = include_str ! ("../docs/Foo.md")]
struct Foo {
    # [doc = include_str ! ("../docs/Foo/field.md")]
    field: i32,
}
# [doc = include_str ! ("../docs/actual_function.md")]
fn actual_function() {}
