syncdoc-core/tests/snapshots/basic__impl_block_with_generics.snap
---
source: syncdoc-core/tests/basic.rs
expression: "test_with_code(\"test_impl_block_with_generics\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

struct Container<T> {
    inner: T,
}

impl<T> Container<T>
where
    T: Clone + std::fmt::Debug,
{
    pub fn new(value: T) -> Self {
        Self { inner: value }
    }

    pub fn get(&self) -> &T {
        &self.inner
    }

    pub fn set(&mut self, new_value: T) {
        self.inner = new_value;
    }
}
