syncdoc-core/tests/snapshots/basic__module_with_functions.snap
---
source: syncdoc-core/tests/basic.rs
expression: "test_with_code(\"test_module_with_functions\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
mod calculations {
    pub fn fibonacci(n: u64) -> u64 {
        if n <= 1 {
            n
        } else {
            add_numbers(fibonacci(n - 1), fibonacci(n - 2))
        }
    }

    fn add_numbers(a: u64, b: u64) -> u64 {
        a + b
    }
}
