syncdoc-core/tests/snapshots/basic__multiple_functions.snap
---
source: syncdoc-core/tests/basic.rs
expression: "test_with_code(\"test_multiple_functions\", code)"
---
#![doc = include_str!("../docs/lib.md")]

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

fn foo(x: i32) -> i32 {
    bar(x + 1)
}

fn bar(y: i32) -> i32 {
    y * 2
}
