syncdoc-core/tests/snapshots/basic__single_function.snap
---
source: syncdoc-core/tests/basic.rs
expression: "apply_doc_injection(input, \"../docs\")"
---
# [doc = include_str ! ("../docs/hello.md")]
fn hello() {
    println!("world");
}
